// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Team HeaderArea renders correctly 1`] = `
<div class="team-header-container">
  <h1>Project Members</h1>
  <div class="team-header-container__wrapper">
    <headercomponent-stub placeholder="Team Members" search="function () { [native code] }">
      <div class="header-default-state"><span>The only project role currently available is Admin, which gives <b>full access</b> to the project.</span>
        <button-stub label="+Add" width="122px" height="48px" onpress="function () { [native code] }" class="button"></button-stub>
      </div>
      <!---->
      <!---->
    </headercomponent-stub>
    <!---->
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Team HeaderArea renders correctly with 1 selected user and delete clicked once 1`] = `
<div class="team-header-container">
  <h1>Project Members</h1>
  <div class="team-header-container__wrapper">
    <headercomponent-stub placeholder="Team Members" search="function () { [native code] }">
      <!---->
      <!---->
      <div class="header-after-delete-click"><span>Are you sure you want to delete 1 user?</span>
        <div class="header-after-delete-click__button-area">
          <button-stub label="Delete" width="122px" height="48px" onpress="function () { [native code] }" class="button deletion"></button-stub>
          <button-stub label="Cancel" width="122px" height="48px" iswhite="true" onpress="function () { [native code] }" class="button"></button-stub>
        </div>
      </div>
    </headercomponent-stub>
    <div class="blur-content"></div>
    <div class="blur-search"></div>
  </div>
  <adduserpopup-stub></adduserpopup-stub>
</div>
`;

exports[`Team HeaderArea renders correctly with 2 selected users and delete clicked once 1`] = `
<div class="team-header-container">
  <h1>Project Members</h1>
  <div class="team-header-container__wrapper">
    <headercomponent-stub placeholder="Team Members" search="function () { [native code] }">
      <!---->
      <!---->
      <div class="header-after-delete-click"><span>Are you sure you want to delete 2 users?</span>
        <div class="header-after-delete-click__button-area">
          <button-stub label="Delete" width="122px" height="48px" onpress="function () { [native code] }" class="button deletion"></button-stub>
          <button-stub label="Cancel" width="122px" height="48px" iswhite="true" onpress="function () { [native code] }" class="button"></button-stub>
        </div>
      </div>
    </headercomponent-stub>
    <div class="blur-content"></div>
    <div class="blur-search"></div>
  </div>
  <!---->
</div>
`;

exports[`Team HeaderArea renders correctly with opened Add team member popup 1`] = `
<div class="team-header-container">
  <h1>Project Members</h1>
  <div class="team-header-container__wrapper">
    <headercomponent-stub placeholder="Team Members" search="function () { [native code] }">
      <div class="header-default-state"><span>The only project role currently available is Admin, which gives <b>full access</b> to the project.</span>
        <button-stub label="+Add" width="122px" height="48px" onpress="function () { [native code] }" class="button"></button-stub>
      </div>
      <!---->
      <!---->
    </headercomponent-stub>
    <!---->
    <!---->
  </div>
  <adduserpopup-stub></adduserpopup-stub>
</div>
`;

exports[`Team HeaderArea renders correctly with selected users 1`] = `
<div class="team-header-container">
  <h1>Project Members</h1>
  <div class="team-header-container__wrapper">
    <headercomponent-stub placeholder="Team Members" search="function () { [native code] }">
      <!---->
      <div class="header-selected-members">
        <button-stub label="Delete" width="122px" height="48px" onpress="function () { [native code] }" class="button deletion"></button-stub>
        <button-stub label="Cancel" width="122px" height="48px" iswhite="true" onpress="function () { [native code] }" class="button"></button-stub>
      </div>
      <!---->
    </headercomponent-stub>
    <!---->
    <!---->
  </div>
  <adduserpopup-stub></adduserpopup-stub>
</div>
`;
